<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDescontoSimples">

    <EditText
        android:id="@+id/nTaxaDescontoSimples"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nValorDescontoSimples" />

    <TextView
        android:id="@+id/textoCapital3"
        android:layout_width="57dp"
        android:layout_height="17dp"
        android:layout_marginTop="76dp"
        android:text="@string/Nominal"
        app:layout_constraintEnd_toStartOf="@+id/nValorDescontoSimples"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoTaxaJuros3"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/taxa"
        app:layout_constraintEnd_toStartOf="@+id/nTaxaDescontoSimples"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoCapital3" />

    <TextView
        android:id="@+id/textoTempo3"
        android:layout_width="48dp"
        android:layout_height="19dp"
        android:layout_marginTop="56dp"
        android:text="@string/tempo"
        app:layout_constraintEnd_toStartOf="@+id/nTempoDescontoSimples"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoTaxaJuros3" />

    <EditText
        android:id="@+id/nTempoDescontoSimples"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTaxaDescontoSimples" />

    <Button
        android:id="@+id/btCalcularDesconto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/CalcularDesconto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTempoDescontoSimples" />

    <EditText
        android:id="@+id/nValorDescontoSimples"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />
</androidx.constraintlayout.widget.ConstraintLayout>